--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -43,6 +43,7 @@ li{
       text-align: left;
       border-bottom: 1px solid #ddd;
       color:#888;
+      padding: 10px;
 
       &:first-child{
          border-top: 1px solid #ddd;
@@ -68,6 +69,8 @@ p{
       font-size: 1.1em;
       text-align: left;
       line-height: 1.3em;
+      width: 90%;
+      margin: 20px 10px;
    }
 }
 
