--- a/_css/main.css
+++ b/_css/main.css
@@ -17,7 +17,8 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
-  overflow: hidden; }
+  overflow: hidden;
+  margin-bottom: 20px; }
 
 li {
   float: left;
@@ -46,7 +47,8 @@ li {
 h1 {
   text-align: center;
   font-size: 3em;
-  font-weight: lighter; }
+  font-weight: lighter;
+  margin-bottom: 20px; }
 
 p {
   line-height: 1.5em;
