--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -23,6 +23,7 @@ ul{
    padding:0;
    list-style: none;
    overflow: hidden;
+   margin-bottom: 20px;
 }
 
 li{
@@ -59,6 +60,7 @@ h1{
    text-align: center;
    font-size: 3em;
    font-weight: lighter;
+   margin-bottom: 20px;
 }
 
 p{
